--- a/flash-site/package.json
+++ b/flash-site/package.json
@@ -2,6 +2,7 @@
   "name": "str",
   "version": "1.3.0",
   "private": true,
+  "homepage": "https://pantheonjohn.github.io/football-flashcards",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
