--- a/flash-site/package.json
+++ b/flash-site/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "buffer-browserify": "^0.2.5",
+    "bfj": "^7.0.2",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "crypto-browserify": "^3.12.0",
